--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,20 @@
 version: '3.8'
 
 services:
+  client:
+    build:
+      dockerfile: Dockerfile
+      context: ./client
+    volumes:
+      - /app/node_modules
+      - ./client:/app
+    ports:
+      - '3000:3000'
+
   flask_app:
     build:
       dockerfile: Dockerfile
-      context: ./
+      context: ./api
     volumes:
       - ./:/app
     ports:
